원하는학점 수정

--- a/student.html
+++ b/student.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript">
@@ -43,7 +43,7 @@
             return ["", "", ""];
         });
         students.push(function get201444013() {
-            return ["", "", ""];
+            return ["201444013", "박문규", "A+"];
         });
         students.push(function get201444014() {
             return ["", "", ""];
