--- a/student.html
+++ b/student.html
@@ -43,7 +43,7 @@
             return ["", "", ""];
         });
         students.push(function get201444013() {
-            return ["201444013", "박문규", "A+"];
+            return ["201444013", "박문규", "100"];
         });
         students.push(function get201444014() {
             return ["", "", ""];
